190810 Resolve: broken css when it is deployed

--- a/feedpage/static/feedpage/partial.css
+++ b/feedpage/static/feedpage/partial.css
@@ -453,6 +453,8 @@
   display: flex !important;
   display: -webkit-flex !important;
   display: -ms-flexbox !important;
+  -webkit-transform: translateZ(0);
+  -webkit-overflow-scrolling: touch;
   justify-content: space-around;
   align-items: center;
   width: 100%;
